proto flow kernel: use tuple instead of numba List

--- a/flow_kernel_prototype.ipynb
+++ b/flow_kernel_prototype.ipynb
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.2 µs ± 281 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.01 µs ± 172 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
     "        kernel.c_callback.ctypes,\n",
     "        kernel.var_names,\n",
     "        kernel.output_var_indices,\n",
-    "        nb.typed.List([arr.ravel() for arr in variables.values()]),\n",
+    "        tuple([arr.ravel() for arr in variables.values()]),\n",
     "        flow_graph_impl.dfs_indices,\n",
     "        flow_graph_impl.receivers_count,\n",
     "        flow_graph_impl.receivers,\n",
@@ -428,7 +428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85.1 µs ± 3.21 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "31.1 µs ± 1.68 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -553,7 +553,7 @@
     "    erosion_flat = erosion.ravel()\n",
     "    drainage_area_flat = drainage_area.ravel()\n",
     "\n",
-    "    for inode in dfs_indices:\n",
+    "    for inode in dfs_indices: \n",
     "        inode_elevation = elevation_flat[inode]\n",
     "        r_count = receivers_count[inode]\n",
     "        \n",
@@ -687,11 +687,11 @@
     "    output_var_names=\"erosion\",\n",
     ")\n",
     "def spl_kernel(nodes_vars, receivers_vars, var_names):\n",
-    "    elevation_ = var_names.index(\"elevation\")\n",
-    "    drainage_area_ = var_names.index(\"drainage_area\")\n",
-    "    erosion_ = var_names.index(\"erosion\")\n",
-    "    distance_ = var_names.index(\"distance\")\n",
-    "    weight_ = var_names.index(\"weight\")\n",
+    "    elevation_ = 0 #var_names.index(\"elevation\")\n",
+    "    drainage_area_ = 1 #var_names.index(\"drainage_area\")\n",
+    "    erosion_ = 2 #var_names.index(\"erosion\")\n",
+    "    distance_ = 3 #var_names.index(\"distance\")\n",
+    "    weight_ = 4 #var_names.index(\"weight\")\n",
     "\n",
     "    nodes_vars[erosion_] = 0.\n",
     "\n",
@@ -825,7 +825,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 s ± 740 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "23.3 s ± 219 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -843,7 +843,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "650 ms ± 12.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "702 ms ± 16.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -861,7 +861,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.82 s ± 27.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "875 ms ± 20 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -879,7 +879,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "662 ms ± 15.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "670 ms ± 18.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
