--- a/test_kernel_record_dtype.ipynb
+++ b/test_kernel_record_dtype.ipynb
@@ -56,8 +56,8 @@
     "    node_dtype: np.dtype\n",
     "    receiver_dtype: np.dtype\n",
     "\n",
-    "    def __call__(self, node_vars, at_receivers):\n",
-    "        self.func(node_vars, at_receivers)\n",
+    "    def __call__(self, at_node, at_receivers):\n",
+    "        self.func(at_node, at_receivers)\n",
     "\n",
     "\n",
     "def jit_flow_kernel(\n",
@@ -68,12 +68,12 @@
     "    function.\n",
     "\n",
     "    The decorated function (i.e., \"kernel function\") is just-in-time\n",
-    "    compiled and then wrapped in a C/C++ callback so that it can be\n",
-    "    executed efficiently while traversing the flow graph.\n",
+    "    compiled using Numba and then wrapped in a C/C++ callback so that\n",
+    "    it can be executed efficiently while traversing the flow graph.\n",
     "\n",
     "    The decorated function must have the following signature:\n",
     "\n",
-    "    ``func(at_node, at_receivers) -> None``\n",
+    "    ``kernel_func_name(at_node, at_receivers) -> None``\n",
     "\n",
     "    With the following passed arguments\n",
     "\n",
@@ -82,7 +82,11 @@
     "      to either read or update those values (updated values are effective\n",
     "      only for output variables, see below).\n",
     "    - ``at_receivers`` : structured 1-d array of (read-only) variable values\n",
-    "      at each of the receiver nodes.\n",
+    "      at each of the receiver nodes. In addition to user-defined variables\n",
+    "      (see below), two properties are also available: \"distance\" (as the\n",
+    "      horizontal distance from the current node to the receiver node)\n",
+    "      and \"weight\" (as the relative amount of flow going from the current node\n",
+    "      to the receiver node).\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
