--- a/test_kernel_record_dtype.ipynb
+++ b/test_kernel_record_dtype.ipynb
@@ -92,10 +92,8 @@
     "    ----------\n",
     "    var_names : tuple\n",
     "        Names of all input and output variable used by the flow kernel. Each\n",
-    "        variable corresponds to a scalar field computed at the grid (graph)\n",
-    "        nodes. Variable values passed as arrays to the kernel function will\n",
-    "        be in the same order than this sequence of names. A maximum of 15\n",
-    "        user-defined variables is allowed.\n",
+    "        variable corresponds to a scalar field (or a component of a vector field)\n",
+    "        computed at the grid (graph) nodes.\n",
     "    output_var_names : tuple\n",
     "        Names of all output variables. Each name given here must be present\n",
     "        also in ``var_names``. The user kernel function usually sets or\n",
@@ -105,15 +103,9 @@
     "        ignored).\n",
     "    \n",
     "    \"\"\"\n",
-    "    if len(var_names) > 15:\n",
-    "        raise ValueError(\n",
-    "            f\"Maximum 15 variables allowed ({len(var_names)} variable names given)\"\n",
-    "        )\n",
-    "\n",
     "    # add the names of reserved variables (after user-defined vars)\n",
     "    node_var_names = var_names\n",
     "    receiver_var_names = node_var_names + (\"distance\", \"weight\")\n",
-    "    all_var_names = receiver_var_names\n",
     "\n",
     "    node_dtype = np.dtype(\n",
     "        {\"names\": node_var_names, \"formats\": [np.float64] * len(node_var_names)},\n",
@@ -250,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.5 µs ± 26.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "5.62 µs ± 176 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -278,7 +270,6 @@
     "@nb.njit\n",
     "def _apply_kernel(\n",
     "    kernel_cfunc,\n",
-    "    var_names,\n",
     "    output_var_indices,\n",
     "    node_type,\n",
     "    receiver_type,\n",
@@ -299,7 +290,7 @@
     "    data_node_v = data_node.view(np.float64)\n",
     "    data_receivers_v = data_receivers.view(np.float64)\n",
     "\n",
-    "    nb_vars = len(var_names)\n",
+    "    nb_vars = len(variables)\n",
     "\n",
     "    # traverse flow graph in depth-first order\n",
     "    for inode in dfs_indices:\n",
@@ -328,18 +319,17 @@
     "    kernel: JITFlowKernel,\n",
     "    variables: dict[str, np.ndarray]\n",
     "):\n",
-    "    if tuple(variables) != kernel.var_names:\n",
+    "    if set(variables) != set(kernel.var_names):\n",
     "        raise ValueError(\"variables and kernel variable names don't match\")\n",
     "\n",
     "    flow_graph_impl = flow_graph.impl()\n",
     "\n",
     "    _apply_kernel(\n",
     "        kernel.c_callback.ctypes,\n",
-    "        kernel.var_names,\n",
     "        kernel.output_var_indices,\n",
     "        kernel.node_dtype,\n",
     "        kernel.receiver_dtype,\n",
-    "        tuple([arr.ravel() for arr in variables.values()]),\n",
+    "        tuple([variables[k].ravel() for k in kernel.var_names]),\n",
     "        flow_graph_impl.dfs_indices,\n",
     "        flow_graph_impl.receivers_count,\n",
     "        flow_graph_impl.receivers,\n",
@@ -446,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.8 µs ± 451 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "11.5 µs ± 239 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -837,7 +827,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.3 s ± 71.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "22.4 s ± 128 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -855,7 +845,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "643 ms ± 8.68 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "654 ms ± 19.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -873,7 +863,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "911 ms ± 6.58 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "918 ms ± 19.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -891,7 +881,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "672 ms ± 12.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "666 ms ± 14.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
